<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableLayout
        android:id="@+id/the_table"
        android:layout_width="fill_parent"
        android:layout_height="200dip"
        android:layout_margin="12dip"
        android:layout_marginTop="48dp"
        android:paddingBottom="3dip"
        android:scrollbars="vertical"
        android:stretchColumns="*" >
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:orientation="vertical" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/setReserveButton"
                android:layout_gravity="left"
                android:text="@string/setReserveText" />

            <Button
                android:id="@+id/cancelReserveButton"
                android:layout_gravity="right"
                android:text="@string/cancelReserveText" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_gravity="left"
                android:text="@string/pidText" />

            <EditText
                android:id="@+id/pid"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_gravity="left"
                android:text="@string/prioText" />

            <EditText
                android:id="@+id/prio"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_gravity="left"
                android:text="@string/cSecText" />

            <EditText
                android:id="@+id/cSec"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView4"
                android:layout_gravity="left"
                android:text="@string/cNsText" />

            <EditText
                android:id="@+id/cNs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_gravity="left"
                android:text="@string/tSecText" />

            <EditText
                android:id="@+id/tSec"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView6"
                android:layout_gravity="left"
                android:text="@string/tNsText" />

            <EditText
                android:id="@+id/tNs"
                android:layout_gravity="fill_horizontal"
                android:ems="10"
                android:inputType="number" />
        </GridLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_marginBottom="17dp"
        android:text="@string/totalEnergy" />

    <TextView
        android:id="@+id/totalEnergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_marginLeft="45dp"
        android:layout_toRightOf="@+id/textView7"
        android:text="TextView" />

</RelativeLayout>